// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories list should render correctly 2 categories 1`] = `
<div>
  <TwoCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "name": "Some mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 2,
          "name": "Some other mock name",
          "slug": "mock-slug",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 3 categories 1`] = `
<div>
  <ThreeCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "name": "Some mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 2,
          "name": "Some other mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 3,
          "name": "Some name",
          "slug": "mock-slug",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 4 categories 1`] = `
<div>
  <FourCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "name": "Some mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 2,
          "name": "Some other mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 3,
          "name": "Some name",
          "slug": "mock-slug",
        },
        Object {
          "id": 4,
          "name": "Mock name",
          "slug": "mock-slug",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly 5 categories 1`] = `
<div>
  <FiveCards
    categoriesList={
      Array [
        Object {
          "id": 1,
          "name": "Some mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 2,
          "name": "Some other mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 3,
          "name": "Some name",
          "slug": "mock-slug",
        },
        Object {
          "id": 4,
          "name": "Mock name",
          "slug": "mock-slug",
        },
        Object {
          "id": 5,
          "name": "Some other other mock name",
          "slug": "mock-slug",
        },
      ]
    }
  />
</div>
`;

exports[`Categories list should render correctly no category 1`] = `<div />`;

exports[`Categories list should render correctly one category 1`] = `
<div>
  <OneCard
    categoriesList={
      Array [
        Object {
          "id": 1,
          "name": "Some mock name",
          "slug": "mock-slug",
        },
      ]
    }
  />
</div>
`;
